[package]
name = "link_checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12.9"
tokio = { version = "1", features = ["full"] }
regex = "1"
itertools = "0.13.0"
printpdf = "0.7.0"
build_html = "2.5.0"
